Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-99277

Sharding metadata invalidated on shard removal

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0, 7.0.18
    • Affects Version/s: 4.2.6, 4.4.0, 5.0.0, 6.0.0, 7.0.0, 8.0.0
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0
    • CAR Team 2025-01-20, CAR Team 2025-02-03
    • 2
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      When a shard is removed from a cluster, both shards and routers invalidate metadata for all namespaces associated with the removed shard:

      This invalidation implies that the next access to the metadata may trigger a full refresh for the affected namespace.

      color: Color value is invalid

      A more efficient approach would be to advance the version for all namespaces associated with the removed shard so that the next access to the metadata would trigger a partial refresh instead.

            Assignee:
            antonio.fuschetto@mongodb.com Antonio Fuschetto
            Reporter:
            antonio.fuschetto@mongodb.com Antonio Fuschetto
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: