SERVER-99277 Avoid full refresh of sharding metadata on shard removal (#31549)

GitOrigin-RevId: 5bf1508b45e53c4156d03060f0c0c7651afcbbdc